Some minor tweaks after a complete pass of the paper

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -1,9 +1,7 @@
 \section{Case study \#3: Recomputing non-CS experiments}
 \label{s:group3}
 
-\subsection{Background}
-
-The focus of this section is on the issues relevant to research reproducibility that are potentially 
+In this case study we focus on the issues relevant to research reproducibility that are potentially 
   unique to non-CS computational research.
 The discussion is based on experience gained while packaging three computational experiments 
   into recomputable virtual machines.
@@ -46,7 +44,7 @@ Framework programme. In the General Conditions part of the project's grant
 agreement, it is stated that the IP rights are awarded to the beneficiary, which
 in this case is the University of Edinburgh. In turn, the University of
 Edinburgh has issued a position statement on intellectual property
-rights\footnote{\url{http://tinyurl.com/kh8quod}} in which it stated that it ``\emph{is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
+rights\footnote{\url{http://www.research-innovation.ed.ac.uk/Portals/0/Documents/University-of-Edinburgh-Position-Statement-on-Intellectual-Property_December2011.pdf}} in which it stated that it ``\emph{is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
 \item Data-related: the code uses a dataset based on bus location measurements provided to us by Lothian Buses. We would need their permission to put this dataset in the public domain.
 \end{itemize}
 The use of the SSJ package is not an obstacle because it is released under the GPL licence from GNU.
@@ -115,7 +113,7 @@ the GNU Scientific Library
 %  TRoLE code. 
 %Once these function calls were corrected, the recomputation was successful. 
 
-Figure \ref{fig_recomp_grp3_exp2} shows two of the recomputated plots, the published energy distributions 
+Figure \ref{fig_recomp_grp3_exp2} shows two of the recomputed plots, the published energy distributions 
   \cite{bareford2010nanoflare} are given in blue.
 \begin{figure}
 \begin{minipage}{\linewidth} 
@@ -128,7 +126,7 @@ Figure \ref{fig_recomp_grp3_exp2} shows two of the recomputated plots, the publi
   %\includegraphics{../Group_3/wrpf_rx10e5_lle1}
   %\vspace{5pt}
   \includegraphics[scale=0.001]{../Group_3/wrpf_rx10e5_lle0}
-  \caption{\small{Flare energy distributions over 10$^5$ relaxation events for two different loop lifetimes, 100 (top) and 1 (bottom) relaxation event(s). The red plots are the recomputated results and the blue are the results from the original paper \cite{bareford2010nanoflare}.}}
+  \caption{\small{Flare energy distributions over 10$^5$ relaxation events for two different loop lifetimes, 100 (top) and 1 (bottom) relaxation event(s). The red plots are the recomputed results and the blue are the results from the original paper \cite{bareford2010nanoflare}.}}
   \label{fig_recomp_grp3_exp2}
   %\vspace{-10pt}
 \end{minipage} 
