--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -54,11 +54,13 @@ assumed, or environmental aspects unconsidered. Can a carefully prepared
 experiment be recomputable by someone with no specific background in the area?
 
 Most of the work for this paper was performed during the Summer School on
-Experimental Methodology in Computational Science Research. Indeed, a highly
-provisional first draft of this paper was completed by the end of the Summer
-School, with ensuing weeks used in completing work and writing.  \footnote{St
+Experimental Methodology in Computational Science Research.\footnote{St
 Andrews, Scotland, August 4-8, 2014,
-\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}} The first three case studies
+\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}}
+Indeed, a highly
+provisional first draft of this paper was completed by the end of the Summer
+School~\cite{emcsr_arxiv_draft}, with ensuing weeks used in completing work and writing.  
+The first three case studies
 were selected by discussing the interests of participants and forming groups
 and research questions around these. Therefore, these case studies were
 performed by subsets of the authors. These case studies will be
@@ -76,10 +78,11 @@ Additionally, we consider the meta-level question of how reproducible this paper
 itself is.  We have striven to make this paper open, reproducible, and
 executable.
 The entire edit history, including paper and many aspects of the
-case studies, is available openly on GitHub and was indeed open from the start
-of writing the paper.  The paper has executable aspects through integration of R
-and \LaTeX\ via the R package Sweave~\cite{sweave}, so that as the underlying
-data changes, new tables and figures can be regenerated automatically. Finally,
+case studies, is available openly on
+GitHub\footnote{\url{https://github.com/larskotthoff/recomputation-ss-paper/}} and was indeed open from the start
+of writing the paper.  The paper has executable aspects through the integration of R
+and \LaTeX\ via the R package Sweave~\cite{pineda-krch:sweave}, so that as the underlying
+data change, new tables and figures can be regenerated automatically. Finally,
 we have endeavoured to make it reproducible through measures such as providing
 virtual machines for aspects of our work, not least a virtual machine in which
 the paper itself can be rebuilt.
