--- a/SummerSchoolPaper/obstacles.tex
+++ b/SummerSchoolPaper/obstacles.tex
@@ -31,12 +31,13 @@ Thus investing the time to offer reproducibility is difficult without
   be subject to legal limitations due to intellectual property and
   data protection issues.
 Sharing data may additionally be bound to ethical responsibility, for instance
-  if the data contains personal records or other sensitive information.  
+  if the data contain personal records or other sensitive information.  
 Even non-sensitive non-commercial data may not be readily redistributed
   without assuring proper ethical consent from the data originators.
 
-{\bf Practicalities} -- there is definitely no consensus as to what the
-  best technique for facilitating reproducibility of computational experiments is. 
+{\bf Practicalities} -- there is definitely no consensus as to the
+  best technique for facilitating reproducibility of computational
+  experiments. 
 The reasons are at least threefold. 
 First, the wealth of nomenclature (replicate, recompute, reproduce, 
   rerun, repeat, reuse) indicates that the aims and the needs of researchers
