--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -388,3 +388,16 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
       year = {2010},
        doi = {10.1038/467775a}
 }
+
+@Misc{emcsr_arxiv_draft,
+  author      =	{Arabas, Sylwester and Bareford, Michael R. and Gent, Ian P. and Gorman, Benjamin M. and Hajiarabderkani, Masih and Henderson, Tristan and Hutton, Luke and Konovalov, Alexander and Kotthoff, Lars and McCreesh, Ciaran and Paul, Ruma R. and Petrie, Karen E. J. and Razaq, Abdul and Reijsbergen, Dani\"{e}l},
+  title	      =	{An Open and Reproducible Paper on Openness and Reproducibility of Papers in Computational Science},
+  abstract    =	{This paper was written by participants of the First Summer School on Experimental Methodology in Computational Science Research. We report several case studies performed during the school and systematize our experiences. This paper is open and reproducible: the whole process of writing this paper is captured in the GitHub repository hosting both the source of the paper, supplementary codes and data; we are providing setup for several experiments on which we were working; finally, we are trying to describe what we have achieved during the week of the school in a way that others may repeat (and hopefully improve) our experiments.},
+  archiveprefix={arXiv},
+  day	      =	{9},
+  eprint      =	{1408.2123},
+  keywords    =	{crawdad_mention, reproducibility, emcsr2014},
+  month	      =	aug,
+  url	      =	{http://arxiv.org/abs/1408.2123},
+  year	      =	{2014}
+}
