--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -33,8 +33,8 @@ software sustainable, by using best practices for programming, and
 indeed thinking about what ``good'' code means.
 
 Darren Kidney from St Andrews covered more practical aspects of reproducible
-research and gave a tutorial on R and SWeave to create
-recomputable papers. Indeed this paper is written using SWeave.
+research and gave a tutorial on R and Sweave to create
+recomputable papers. Indeed this paper is written using Sweave.
 
 In addition to sharing code and the systems used to run an experiment,
 much reproducible research requires the sharing of research data,
@@ -57,4 +57,5 @@ computations. Miguel Nacenta from the St Andrews Human-Computer
 Interaction research group discussed the issues around
 reproducibility in HCI experiments that involve human participants,
 and led a session in which summer school attendees attempted to
-reproduce the analysis from one of his own HCI research papers.
+reproduce the analysis from one of his own HCI research papers (see
+    Section~\ref{s:group4}).
