--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -41,7 +41,7 @@ of tools, to make their research more reproducible, e.g., Mozilla Science
 Labs\footnote{\url{http://mozillascience.org/}}, Open Science
 Framework\footnote{\url{https://osf.io/}},
 RunMyCode\footnote{\url{http://www.runmycode.org/}} and Software
-Carpentry\footnote{\url{http://software-carpentry.org/}}. Davison describes how
+Carpentry.\footnote{\url{http://software-carpentry.org/}} Davison describes how
 to make it easier to capture workflow and experimental context, including using
 a ``consistent, repeatable computing environment'' (the recomputation.org
 project and others~\cite{howe:reproducible} aim to make this particular aspect
