revert to the tinyurl (perhaps make this a reference?)

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -44,7 +44,8 @@ Framework programme. In the General Conditions part of the project's grant
 agreement, it is stated that the IP rights are awarded to the beneficiary, which
 in this case is the University of Edinburgh. In turn, the University of
 Edinburgh has issued a position statement on intellectual property
-rights\footnote{\url{http://www.research-innovation.ed.ac.uk/Portals/0/Documents/University-of-Edinburgh-Position-Statement-on-Intellectual-Property_December2011.pdf}} in which it stated that it ``\emph{is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
+rights\footnote{\url{http://tinyurl.com/kh8quod}}
+in which it stated that it ``\emph{is the policy of the University of Edinburgh to develop University research capabilities and to assess, develop and promote the transfer of Edinburgh's technology and ideas for society's use and benefit.}'' Still, publication of the code would need to be checked with a supervisor.
 \item Data-related: the code uses a dataset based on bus location measurements provided to us by Lothian Buses. We would need their permission to put this dataset in the public domain.
 \end{itemize}
 The use of the SSJ package is not an obstacle because it is released under the GPL licence from GNU.
