--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -9,6 +9,7 @@
   eprint      =	{1304.3674},
   keywords    =	{recomputation, reproducibility, research, virtualisation},
   month	      =	apr,
+  note        = {arXiv preprint arXiv:1304.3674},
   url	      =	{http://arxiv.org/abs/1304.3674},
   year	      =	{2013}
 }
@@ -71,10 +72,11 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   publisher={Springer}
 }
 
-@article{arabas2013libcloud,
+@misc{arabas2013libcloud,
   title={libcloudph{++} 0.1: single-moment bulk, double-moment bulk, and particle-based warm-rain microphysics library in {C++}},
   author={Arabas, Sylwester and Jaruga, Anna and Pawlowska, Hanna and Grabowski, Wojciech W},
-  journal={arXiv preprint arXiv:1310.1905},
+  note={arXiv preprint arXiv:1310.1905},
+  url = {http://arxiv.org/abs/1310.1905},
   year={2013}
 }
 
@@ -398,6 +400,7 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   eprint      =	{1408.2123},
   keywords    =	{crawdad_mention, reproducibility, emcsr2014},
   month	      =	aug,
+  note        = {arXiv preprint arXiv:1408.2123},
   url	      =	{http://arxiv.org/abs/1408.2123},
   year	      =	{2014}
 }
