quick hack to make arxiv links clickable

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -9,8 +9,7 @@
   eprint      =	{1304.3674},
   keywords    =	{recomputation, reproducibility, research, virtualisation},
   month	      =	apr,
-  note        = {arXiv preprint arXiv:1304.3674},
-  url	      =	{http://arxiv.org/abs/1304.3674},
+  arxiv =	{1304.3674},
   year	      =	{2013}
 }
 
@@ -18,7 +17,7 @@
   Author = {McCreesh, Ciaran and Prosser, Patrick},
 	Title = {The Shape of the Search Tree for the Maximum Clique Problem, and the Implications for Parallel Branch and Bound},
   Year = {2014},
-	url = {http://arxiv.org/abs/1401.5921}}
+	arxiv = {1401.5921}}
   
 @url{azure,
 	Howpublished = {\url{https://azure.microsoft.com/en-us/}},
@@ -75,8 +74,7 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 @misc{arabas2013libcloud,
   title={libcloudph{++} 0.1: single-moment bulk, double-moment bulk, and particle-based warm-rain microphysics library in {C++}},
   author={Arabas, Sylwester and Jaruga, Anna and Pawlowska, Hanna and Grabowski, Wojciech W},
-  note={arXiv preprint arXiv:1310.1905},
-  url = {http://arxiv.org/abs/1310.1905},
+  arxiv = {1310.1905},
   year={2013}
 }
 
@@ -400,7 +398,6 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   eprint      =	{1408.2123},
   keywords    =	{crawdad_mention, reproducibility, emcsr2014},
   month	      =	aug,
-  note        = {arXiv preprint arXiv:1408.2123},
-  url	      =	{http://arxiv.org/abs/1408.2123},
+  arxiv       = {1408.2123},
   year	      =	{2014}
 }
