A bit more text in Group 4
More to come tonight!!

--- a/SummerSchoolPaper/group4.tex
+++ b/SummerSchoolPaper/group4.tex
@@ -18,10 +18,11 @@ For this purpose, and in the context of the summer school that this article refl
 
 \subsection{Experience Report: Recomputing a Memorability Experiment}
 The authors of this article (hence the \emph{reanalysts}), with the exception of
-M.A.N. were divided into four groups (4, 4, 5, and 3 people per group), each of which would try to reproduce a selection of the results of the gesture memorability study reported in reference \cite{Nacenta:memorability}. Approximately half of the reanalysts had a good understanding of HCI or had performed research in the HCI field. To provide sufficient background, the author of the reanalyzed paper gave a 20 minute presentation on the content of the paper, aimed at a moderately knowledgeable audience. Reanalysts were allowed to ask any number of questions at the end.
+M.A.N. divided themselves into four groups (4, 4, 5, and 3 people per group), each of which would try to reproduce the same selection of results of the gesture memorability study reported in reference \cite{Nacenta:memorability}. The target results for reanalysis were the averages and ANOVA analyses of the first paragraph of the <emph{Results} section of \emph{Experiment 3}. Approximately half of the reanalysts had a good understanding of HCI or had performed research in the HCI field. To provide sufficient background, the author of the reanalyzed paper gave a 20 minute presentation on the content of the paper, aimed at a moderately knowledgeable audience. Reanalysts were allowed to ask any number of questions at the end.
 
-The reanalysts received also a physical and a digital version of the original paper and a URL from where to download the data (as distributed originally to the public in \cite{Nacenta:memorability_data}). The data is provided in a comma separated file (with column heading names in the first row). The data includes 
+The reanalysts received also a physical and a digital version of the original paper and a URL from where to download the data (as distributed originally to the public in \cite{Nacenta:memorability_data}). The data is provided in a comma separated file (with column heading names in the first row). The data package also includes IBM SPSS Syntax files (SPSS's scripting language), and a README.txt file that contains descriptions of the different files, including explanations of the meanings of columns. SPSS syntax files were provided because it was the platform in which the analyses were performed, and it is commonly used as statistical software for the analysis of experiments in the HCI and Psychology communities. 
 
+Groups were given approximately 90 minutes to replicate the results contained in the paragraph indicated above.
 
 
 
