Some more text and subsections - Group 4

--- a/SummerSchoolPaper/group4.tex
+++ b/SummerSchoolPaper/group4.tex
@@ -22,18 +22,19 @@ M.A.N. divided themselves into four groups (4, 4, 5, and 3 people per group), ea
 
 The reanalysts received also a physical and a digital version of the original paper and a URL from where to download the data (as distributed originally to the public in \cite{Nacenta:memorability_data}). The data is provided in a comma separated file (with column heading names in the first row). The data package also includes IBM SPSS Syntax files (SPSS's scripting language), and a README.txt file that contains descriptions of the different files, including explanations of the meanings of columns. SPSS syntax files were provided because it was the platform in which the analyses were performed, and it is commonly used as statistical software for the analysis of experiments in the HCI and Psychology communities. 
 
-Groups were given approximately 90 minutes to replicate the results contained in the paragraph indicated above.
-
-
-
-- One of the authors: support for replication, 2 papers
-- Big questions as to whether even if the data is made available, the process is acceptable
-
-- Authors (except main author of the paper), generally a group of experts, set out to reproduce the main selected results in a 1.5h session
-- Presentation on the topic, to allow them to understand
-- 
+Groups were given approximately 90 minutes to replicate the results contained in the paragraph of the paper indicated above. Of the four groups, two opted to try to replicate the results by using SPSS (installed in the machines available to the reanalysts), one opted to replicate the results using R, and one opted to replicate the results using R while simultaneously recording the recomputation in a virtual machine. The leader of the session provided help to the SPSS groups strictly on issues related to the SPSS interface. Each group was asked to assign one person to take notes on a paper notepad of the development of the session (specifically, steps taken, difficulties found, misunderstandings, and breakthroughs).
 
 \subsection{Results}
+
+\subsubsection{Effectiveness}
+\emph{Group 1 (SPSS)} achieved 
+\emph{Group 2 (SPSS)} achieved
+\emph{Group 3 (SPSS)} achieved
+\emph{Group 4 (SPSS)} achieved
+
+\subsubsection{Difficulties and Challenges}
+
+
 - Layers of knowledge needed pretty broad
 - Access to software problematic (SPSS)
 - Specific numbers difficult to find
