--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -79,8 +79,11 @@ itself is.  We have striven to make this paper open, reproducible, and
 executable.
 The entire edit history, including paper and many aspects of the
 case studies, is available openly on
-GitHub\footnote{\url{https://github.com/larskotthoff/recomputation-ss-paper/}} and was indeed open from the start
-of writing the paper.  The paper has executable aspects through the integration of R
+GitHub
+and was indeed open from the start
+of writing the paper.  
+\cite{summerschoolpaper}
+The paper has executable aspects through the integration of R
 and \LaTeX\ via the R package Sweave~\cite{pineda-krch:sweave}, so that as the underlying
 data change, new tables and figures can be regenerated automatically. Finally,
 we have endeavoured to make it reproducible through measures such as providing
