--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -1,3 +1,8 @@
+@Misc{summerschoolpaper,
+    year = 2014,
+    url = "https://github.com/larskotthoff/recomputation-ss-paper/",
+    title = "GitHub repository for Recomputation Summer School Paper",
+}
 
 @Misc{gent:recomputation,
   author      =	{Gent, Ian P.},
@@ -355,6 +360,32 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
     note = {Accessed 28 August 2014},
 }
 
+@inproceedings{Nacenta:memorability,
+      author    = {Miguel A. Nacenta and
+                         Yemliha Kamber and
+                                            Yizhou Qiang and
+                                                           Per Ola Kristensson},
+        title     = {Memorability of pre-designed and user-defined gesture sets},
+          booktitle = {CHI},
+            year      = {2013},
+              pages     = {1099-1108},
+                ee        = {http://doi.acm.org/10.1145/2470654.2466142},
+                  crossref  = {DBLP:conf/chi/2013},
+                    bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/chi/2013,
+      editor    = {Wendy E. Mackay and
+                         Stephen A. Brewster and
+                                            Susanne B{\o}dker},
+        title     = {2013 ACM SIGCHI Conference on Human Factors in Computing
+                           Systems, CHI '13, Paris, France, April 27 - May 2, 2013},
+          booktitle = {CHI},
+            publisher = {ACM},
+              year      = {2013},
+                isbn      = {978-1-4503-1899-0},
+                  ee        = {http://dl.acm.org/citation.cfm?id=2470654},
+                    bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 
 @Misc{NSF,
     title = {A vision and strategy for software for science, engineering and education},
