--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -81,8 +81,8 @@ The entire edit history, including paper and many aspects of the
 case studies, is available openly on
 GitHub
 and was indeed open from the start
-of writing the paper.  
-\cite{summerschoolpaper}
+of writing the paper  
+\cite{summerschoolpaper}.
 The paper has executable aspects through the integration of R
 and \LaTeX\ via the R package Sweave~\cite{pineda-krch:sweave}, so that as the underlying
 data change, new tables and figures can be regenerated automatically. Finally,
