--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -1,7 +1,13 @@
 @Misc{summerschoolpaper,
     year = 2014,
     url = "https://github.com/larskotthoff/recomputation-ss-paper/",
-    title = "GitHub repository for Recomputation Summer School Paper",
+    title = "GitHub repository for Recomputation Summer School Paper"}
+    
+@Misc{parasols,
+    year = 2014,
+    url = "https://github.com/ciaranm/parasols/"
+    author = "Ciaran McCreesh",
+    title = "GitHub repository for Parallel Solvers for Hard Problems",
 }
 
 @Misc{gent:recomputation,
