--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -5,7 +5,7 @@
     
 @Misc{parasols,
     year = 2014,
-    url = "https://github.com/ciaranm/parasols/"
+    url = "https://github.com/ciaranm/parasols/",
     author = "Ciaran McCreesh",
     title = "GitHub repository for Parallel Solvers for Hard Problems",
 }
